# aerodesign-auto

./: .gitignore  README.md  __init__.py  pyproject.toml
functions/: __init__.py  readImg.py  velocity.py  writeData.py
src/: constants.py  getWindow.py  readImg.py  velocity.py
src/functions/: __init__.py  readImg.py  thrust.py  writeData.py
