[tool.poetry]
name = "aerodesign-auto"
version = "0.1.0"
description = ""
authors = ["Polluix <lipe311973@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyautogui = "^0.9.54"
pygetwindow = "^0.0.9"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
easyocr = "^1.7.1"
pyinstaller = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
